# figo

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_CN.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/design-critic/: SKILL.md
.claude/skills/figo-design/: SKILL.md
.claude/skills/new-app/: SKILL.md
.claude/skills/web-to-godot/: SKILL.md
apps/editor/: editor.h  editor_canvas.cpp  editor_dialogs.cpp  editor_inspector.cpp  editor_mcp.cpp  editor_mcp.h  editor_mcp_net.cpp  editor_mcp_net.h  editor_panels.cpp  editor_state.cpp  main.cpp  svg_import.cpp  svg_import.h
apps/fapp2godot/: main.cpp
apps/figmaplay/: main.cpp
apps/figmaplay/android/: AndroidManifest.xml
apps/figo2godot/: main.cpp
apps/figoplay/: main.cpp
apps/figoplay/android/: AndroidManifest.xml
backends/raylib/: figmalib_raylib.cpp  figmalib_raylib.h  figo_raylib.cpp  figo_raylib.h  pinch_gesture.h  pinch_macos.mm  pinch_stub.cpp
branding/: README.md
design-systems/: NOTICE  README.md  TOKEN_MAPPING.md
design-systems/components/: README.md  m3-palette.json
design-systems/icons/: README.md
design-systems/skills/taste/: SOURCE.md
design-systems/theme/: README.md  theme.js
docs/: ROADMAP.md  benchmark-gaps.md  design-g3-value-binding.md  design-gaps.md
docs/agent-memory/: MEMORY.md  README.md  figoplay-shot-basename.md  react-to-psd-pipeline.md
examples/apps/_diag_regress/: app.js  app.json  design.json  gen_design.py
examples/apps/_events_regress/: app.js  app.json  design.json
examples/apps/_snap_regress/: app.js  app.json  design.json
examples/apps/_token_regress/: app.js  app.json  design.json  gen_design.py
examples/apps/_value_regress/: app.js  app.json  design.json  gen_design.py
examples/apps/alarm/: app.js  app.json  design.json  gen_design.py  gen_sound.py
examples/apps/amongus/: app.js  app.json  design.json
examples/apps/calculator/: app.js  app.json  design.figo.json  gen_design.py
examples/apps/calendar/: app.js  app.json  design.json  gen_design.py
examples/apps/chat/: app.js  app.json  design.json  gen_design.py
examples/apps/expense/: app.js  app.json  design.json  gen_design.py
examples/apps/habits/: app.js  app.json  design.json  gen_design.py
examples/apps/login/: app.js  app.json  design.json  gen_design.py
examples/apps/music/: app.js  app.json  design.json  gen_design.py  gen_sound.py
examples/apps/news/: app.js  app.json  design.json  gen_design.py
examples/apps/notes/: app.js  app.json  design.json  gen_design.py
examples/apps/pomodoro/: app.js  app.json  design.json  gen_design.py  gen_sound.py
examples/apps/recipes/: app.js  app.json  design.json  gen_design.py
examples/apps/sample/: app.js  app.json
examples/apps/settings/: app.js  app.json  design.json  gen_design.py
examples/apps/shop/: app.js  app.json  design.json  gen_design.py
examples/apps/theming/: app.js  app.json  design.figo.json
examples/apps/todo/: app.js  app.json  design.json  gen_design.py
examples/apps/weather/: app.js  app.json  design.json  gen_design.py
examples/assets/: sample_ui.json
examples/demo_raylib/: main.cpp
examples/demo_script/: main.cpp  wallet.js
examples/demo_wallet/: main.cpp
examples/layout_test/: main.cpp
examples/render_test/: main.cpp
examples/scripts/: wallet.js
include/figmalib/: document.h  figmalib.h  layout.h  parser.h  renderer.h  script.h  ui.h
include/figo/: document.h  figo.h  layout.h  parser.h  renderer.h  script.h  ui.h
prebuild/: README.md
skills/design-critic/: SKILL.md
skills/export-prefab/: SKILL.md
skills/figo-design/: SKILL.md
skills/new-app/: SKILL.md
skills/setup/: SKILL.md
src/: canvas_parser.cpp  document.cpp  fig_loader.cpp  font_provider.cpp  font_provider.h  layout.cpp  parser.cpp  renderer.cpp  scene_builder.cpp  scene_builder.h  script_host.cpp  serializer.cpp  svg_path.cpp  svg_path.h  ui.cpp
templates/form/: app.js  app.json  design.json
templates/list-detail/: app.js  app.json  design.json
templates/tab-shell/: app.js  app.json  design.json
tests/layout_test/: main.cpp
tests/render_test/: main.cpp
tools/: android_arm64.txt  android_x64.txt  bench.py  build_android.ps1  build_thorvg_android.cmd  build_thorvg_wasm.cmd  build_web.cmd  figmanew.py  figmapack.py  gen_components.py  gen_templates.py  wasm32_emscripten.txt
tools/web2canvas/: README.md  html2godot.js  index.js  package-lock.json  package.json  prototype.js
tools/web2canvas/test/: gogokill.all.flows.json  gogokill.flows.json  gogokill.full.flows.json  sample.html
tools/web_test/: clicktest.html  serve.py
